fix: bug where app fails to inject react screen

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--
  This page is shown when the extension button is clicked, because the
  "browser_action" field in manifest.json contains the "default_popup" key with
@@ -30,7 +30,7 @@
 
   <body>
     <div id="container">
-     <!--
+      <!--
       Render react app in the visited website when the .start button is clicked.
      -->
       <button class="start">
