--- a/src/popup.html
+++ b/src/popup.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
-<!--
- This page is shown when the extension button is clicked, because the
- "browser_action" field in manifest.json contains the "default_popup" key with
- value "popup.html".
- -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>PlantUML Visualizer</title>
     <style type="text/css">
       body {
         margin: 10px;
@@ -30,11 +25,8 @@
 
   <body>
     <div id="container">
-      <!--
-      Render react app in the visited website when the .start button is clicked.
-     -->
       <button class="start">
-        Render App
+        Hello
       </button>
     </div>
   </body>
