--- a/src/popup.html
+++ b/src/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h2>plantuml visualizer</h2>
+    <div id="popup"></div>
   </body>
   <script src="./popup.js"></script>
   <!-- popup.js will be in dist/ after bundling -->
