--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,7 @@
       <p class="puml-vis-server-url"></p>
       <input class="puml-vis-server-url" style="width: 100%" />
       <p class="puml-vis-error" style="color: #ff604f"></p>
-      <button class="puml-vis-update-server-url">update server</button>
+      <button class="puml-vis-update-server-url">Change server url (https is required)</button>
       <img style="width: 100%" />
       <p class="puml-vis-loading">loading...</p>
     </div>
