build: use svelte for popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <div id="popup" style="width: 500px">
-      <button class="puml-vis-toggle" style="margin-bottom: 10px"></button>
-      <p class="puml-vis-server-url"></p>
-      <input class="puml-vis-server-url" style="width: 100%" />
-      <p class="puml-vis-error" style="color: #ff604f"></p>
-      <button class="puml-vis-update-server-url">Change server url (https is required)</button>
-      <img style="width: 100%" />
-      <p class="puml-vis-loading">loading...</p>
-    </div>
-  </body>
+  <body></body>
   <script src="./popup.js"></script>
   <!-- popup.js will be in dist/ after bundling -->
 </html>
